# Utensil-rs

./: Cargo.toml  README.md
.github/workflows/: build.yml
docs/: ARCHITECTURE.md  BATTERY_LEARNING.md  CONFIGURATION.md
packaging/magisk/: utensil.conf
src/: config.rs  learning.rs  lib.rs  runtime.rs
